IGNITE-2236: Preparing.